--- a/Mango.Services.ProductAPI/Properties/launchSettings.json
+++ b/Mango.Services.ProductAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Mango.Services.ProductAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7092;http://localhost:5092",
       "environmentVariables": {
